# plinth

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/plinth/: Cargo.toml
crates/plinth-cli/: Cargo.toml
crates/plinth-cli/src/: main.rs  mcp.rs  new.rs  sources.rs
crates/plinth-cli/templates/: CLAUDE.md.tmpl  Cargo.toml.tmpl  README.md.tmpl  arena.scene.json.tmpl  main.rs.tmpl
crates/plinth-cli/tests/: assets.rs  mcp.rs  new.rs  sources_live.rs
crates/plinth-scene/: Cargo.toml
crates/plinth-scene/src/: diag.rs  lib.rs  manifest.rs  types.rs  validate.rs
crates/plinth-scene/tests/: manifest.rs  validation.rs
crates/plinth/examples/: arena.rs
crates/plinth/src/: camera.rs  character.rs  lib.rs  loader.rs  playtest.rs  plugins.rs
crates/plinth/tests/: hot_reload.rs  loader.rs  playtest.rs
examples/scenes/: arena.scene.json
schemas/: manifest.schema.json  scene.schema.json
spikes/: README.md
spikes/physics-avian/: Cargo.toml
spikes/physics-avian/src/: main.rs
spikes/physics-rapier/: Cargo.toml
spikes/physics-rapier/src/: main.rs
