[workspace]
resolver = "2"
members = [
    "crates/plinth",
    "crates/plinth-cli",
    "crates/plinth-scene",
    "spikes/physics-avian",
    "spikes/physics-rapier",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Luminary-Analytics/plinth"
authors = ["Rich Bellantoni and Plinth contributors"]

[workspace.dependencies]
# Plinth pins one Bevy minor per release and absorbs migration churn for users.
bevy = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
schemars = "1"
# The ratified stack (see spikes/README.md): physics, character controller,
# input. Pinned here so plinth and user games agree on versions.
avian3d = "0.6.1"
bevy-tnua = "0.31"
bevy-tnua-avian3d = "0.11.1"
leafwing-input-manager = "0.20"

# Compile-time budgets are a Plinth feature: light optimization for our code,
# full optimization for dependencies, so dev rebuilds stay fast and the game
# stays playable.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
